@@ -10,6 +10,7 @@ DIST README-3.12.1.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae5
 DIST README-3.12.2.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST README-3.12.3.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST README-3.12.4.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
+DIST README-3.12.5.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST aufs-sources-3.10_p20131111.tar.xz 151456 SHA256 a5229c12e9cf62a04bc84458df88d4fdb3c4e30e38c184cd2e236b22efe01e6f SHA512 421ac913b40c66dab4ca01da1c08204d1ed78a93e4dba09795f0a081a1af5c30bd82863fafdd034defb840b7961e49713242549c2bbe4d8bddc4c81663b27ff0 WHIRLPOOL c215c4ca78409efe48dea1cae373b645452d16ee8711a00913b52c4796756e90960e3d4a61c0a2b1ddf693aee3e206401f6bf648f0d5af0404cda710ee3d8339
 DIST aufs-sources-3.12_p20131111.tar.xz 152124 SHA256 010b330230b3ce63a4b60b5f049fd3a225518891fce4ac2e4fbd73a02b15a271 SHA512 b34f1d9489748e82d6023ce4b89b87ed7fb4e3b62b99895424f00c241efdc24ff8ccc398ad0558933960fb0c68a61d2bd648d867e95a1ef9617119976422b2e1 WHIRLPOOL db938d8f50d8a5ecd60ddd26422ad851c0d22593b06d113057dec13df30bdb737d00bee888b86cf3c90673301355b6323d7368c7a195ac173be46b2f3411acf7
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
@@ -28,6 +29,8 @@ DIST genpatches-3.12-4.base.tar.xz 110888 SHA256 192c324d4182f7926ffdb12f90d7d4e
 DIST genpatches-3.12-4.extras.tar.xz 18152 SHA256 7eb9d9cc04aaae8cf8018b400573978cfb3d7b19d5072cc15ae22528070961dc SHA512 3ec79a2fedcfff5cc70a162d8dac9f8719e047a345a414b0a23de615c817f6ec1ccc795b46fba5010815daac37678fc5e637336b85d68d82b5759d917602d35a WHIRLPOOL b3912be8d51aff34c08679a35b4132eac3252d09c1f52b35f84b8058649b788e5fa14c459ff1c9480b54f970e6bd2a94b9964a48ae0d9985fff2999f1571fc37
 DIST genpatches-3.12-5.base.tar.xz 144696 SHA256 482364f756d8981c2db95e41a33653682232a98b37202abe7e8f6d0442117250 SHA512 8f98361b4744f23659870a0c97b580ba424448b9c4ac91d5b4bf37c3f7ac384d57ee7de5a266fc2b7bb6a5f98f4d136bc0d613f660cd24bd66e9c3f828384e65 WHIRLPOOL 55a95a48da90b8050959cf7bb3fd2405252394444be2aa0f14869ce782636b98e403300a56aca295016c66d4b4f37122db398a68a073d806269464ac0a66aeb5
 DIST genpatches-3.12-5.extras.tar.xz 18152 SHA256 976f1955368e5bac0bfefe97fc6fc53a67ad003da86c22a0eef8860fc8439909 SHA512 edb22af4c538cd02fc4d43cfe5d2eff887a2ba636c50428c2794722cf02fea3bf22b251ddb81da7d2a934331b4d0231fdeb68fd15e6556bf93cc5d743fbdc923 WHIRLPOOL 6dc333619fb6e70f760adab02c820c58295d3d55f6d60252183f3b979d5cffe78fab04f671dbdada6e1134decfefa8440b28def7ca1a68fc2e9fca41db2a329c
+DIST genpatches-3.12-6.base.tar.xz 162056 SHA256 7a20ec90f9e2be68b7677504209b39ebc9af936354e0d67e193272e6267d4299 SHA512 f90637a34341f864dfa8a9f417f66b58b4cf01770310921af70a777c723af7a04238f27652ed1495fb9e212bfee3a17a5275b3fb76e973c9ad291bd668f5e718 WHIRLPOOL dcce9c4ad4dac92a1161f24de22654a7356559c6b8a2fc6aad186d685c34fb477d0ebdb1ceb925230fcfd1638b1c4d3c04e3ab5229476648c8a827086bc1ec4f
+DIST genpatches-3.12-6.extras.tar.xz 18128 SHA256 51b625d97db6b7e221bb77495095cd4501e2e8a20afa27549dd6fe818badc913 SHA512 852d56205ed82885f64f265b2978ed86c767d4c62527bb8fd376e8a1eb61af9b6c839a5dea1fb91bb0c8a5a1313c50bcadebb71129b38a52b0c5115714e0efa4 WHIRLPOOL 6afe1b3b0b45ad24e590495976ed80cef936e47ae863dbb36519c76799d7e7645d09801f4818ac96f737fa6bc3bd6424e5fe849b41438b3afb3e15a98c5c34a3
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-312-gcc48-1.patch 14066 SHA256 46c2f360ad3dd54648d81b69c438ec5a0f1b4bd2b873250f61a41fc01c1835fb SHA512 577132b6354ad385449316de045368f9ef3cc3129fc112fa41b869d328a0fe312dd956f674eced52459fb36e4f18087b03dddeb9572a2f7479cb858d0df37a6b WHIRLPOOL 7921e37cc602b6240b6c7587e4d90f934e320159eadb99c8974154a634c548a789ddd6e4b7abd7fdbb9bd85b82fda8efcf32023c732bf08d70f649cef5a12057
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
