@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.12.5 (13 Dec 2013)
+
+  13 Dec 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.5.ebuild:
+  Bump to latest genpatches and linux releases
+
 *lh-sources-3.12.4 (08 Dec 2013)
 
   08 Dec 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.12.4.ebuild:
